# TextSummaryML

./: AGENTS.md  README.md  pyproject.toml  run-dev.sh
server/src/: config.py
server/src/api/: app.py
server/src/models/: SummaryResult.py
server/src/services/: WebHandler.py  logger.py  summarizer.py
server/tests/: tests.http
