[project]
name = "textsummaryml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "pydantic>=2.13.4",
    "torch",
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "triton-rocm; sys_platform == 'linux'",
    "transformers>=4.46,<5",
    "uvicorn[standard]>=0.51.0",
    "httpx>=0.28.1",
    "trafilatura>=2.1.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
